add more deta and registration page

--- a/index.html
+++ b/index.html
@@ -2,25 +2,82 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>luxe-scent-emporium</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=5.0"
+    />
+    <meta name="theme-color" content="#4a2458" />
+    <title>Luxe Scent Emporium - Premium Fragrances & Beauty</title>
+    <meta
+      name="description"
+      content="Luxe Scent Emporium - Premium luxury perfumes and beauty products. Discover exclusive fragrances from top designers and luxury brands."
+    />
+    <meta
+      name="keywords"
+      content="luxury perfumes, designer fragrances, beauty products, Tom Ford, Chanel, Dior, YSL, Lancome, premium cosmetics, exclusive perfumes"
+    />
+    <meta name="author" content="Luxe Scent Emporium" />
+    <meta name="robots" content="index, follow, max-image-preview:large" />
 
-    <meta property="og:title" content="luxe-scent-emporium" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Performance hints -->
+    <link rel="dns-prefetch" href="https://images.unsplash.com" />
+    <link
+      rel="preload"
+      href="/src/assets/hero-perfume.jpg"
+      as="image"
+      type="image/jpeg"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta
+      property="og:title"
+      content="Luxe Scent Emporium - Premium Fragrances & Beauty"
+    />
+    <meta
+      property="og:description"
+      content="Premium luxury perfumes and beauty products. Discover exclusive fragrances from top designers and luxury brands."
+    />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    <meta property="og:site_name" content="Luxe Scent Emporium" />
+    <meta property="og:image" content="/src/assets/hero-perfume.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:locale" content="en_US" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@LuxeScentEmporium" />
     <meta
-      name="twitter:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
+      name="twitter:title"
+      content="Luxe Scent Emporium - Premium Fragrances & Beauty"
     />
+    <meta
+      name="twitter:description"
+      content="Premium luxury perfumes and beauty products. Discover exclusive fragrances from top designers."
+    />
+    <meta name="twitter:image" content="/src/assets/hero-perfume.jpg" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Luxe Scent Emporium",
+        "url": "https://yourdomain.com",
+        "description": "Premium luxury perfumes and beauty products e-commerce store",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://yourdomain.com/products?search={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
+
+    <!-- Performance optimizations -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://images.unsplash.com" />
   </head>
 
   <body>
